---------------------------
  Contributors
---------------------------

Dmitry Baikov
Steven Chamberlain
Thom Johansen
Thibault LeMeur
Pieter Palmers
Tom Szilagyi

---------------------------
  Jackdmp changes log
---------------------------

2007-10-16 Stephane Letz  <letz@grame.fr>

	* Reorganize jack headers. Improve Linux install/remove scripts.

2007-10-16 Stephane Letz  <letz@grame.fr>

	* Internal loadable client implementation, winpipe version added. 

2007-10-12 Stephane Letz  <letz@grame.fr>

	* Internal loadable client implementation, socket version added. 
	* Fix JackEngine::Close() method.

2007-10-11 Stephane Letz  <letz@grame.fr>

	* Internal loadable client implementation (in progress).

2007-10-08 Stephane Letz  <letz@grame.fr>

	* Use .jackdrc file (instead of .jackdmprc). Install script now creates a link "jackd ==> jackdmp" so that automatic launch can work correctly. 
	* Paul Davis patch for -r (--replace-registry) feature.

2007-10-07 Stephane Letz  <letz@grame.fr>

	* Add missing timestamps.c and timestamps.h files. Correctly export public headers in OSX frameworks. Suppress JackEngine::ClientInternalCloseIm method.

2007-10-04 Stephane Letz  <letz@grame.fr>

	* Correct "jack_register_server" in shm.c.

2007-10-04 Stephane Letz  <letz@grame.fr>

	* Fix a resource leak issue in JackCoreAudioDriver::Close(). Better implement "jack_client_open" when linking a client with the server library.

2007-10-03 Stephane Letz  <letz@grame.fr>

	* Rename server_name from "default" to "jackdmp_default" to avoid conflict with regular jackd server.

2007-10-02 Stephane Letz  <letz@grame.fr>

	* Correct jack_client_open "status" management.

2007-08-27 Stephane Letz  <letz@grame.fr>

	* Server/library protocol checking implementation.

2007-08-26 Stephane Letz  <letz@grame.fr>

	* Make "Rename" a method of JackPort class, call it from driver Attach method.

2007-08-24 Stephane Letz  <letz@grame.fr>

	* Implement server temporary (-T) mode.
