@@ -13,6 +13,10 @@ Tom Szilagyi
   Jackdmp changes log
 ---------------------------
 
+2007-10-18 Stephane Letz  <letz@grame.fr>
+
+	* Use _X86_64 for 64 bits related compilation (drivers location). More generic Linux script.
+
 2007-10-16 Stephane Letz  <letz@grame.fr>
 
 	* Reorganize jack headers. Improve Linux install/remove scripts.
